welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: not found: value etDirection
	if (estFaceMur() && (etDirection() == Direction.EST)) {
                             ^